--- a/Report/document.tex
+++ b/Report/document.tex
@@ -21,7 +21,7 @@
 
 \textsc{\LARGE University of Tennessee}\\[1.5cm] % Name of your university/college
 \textsc{\Large Multivariate Data Mining and Techniques}\\[0.5cm] % Major heading such as course name
-\textsc{\large BZAN 552}\\[0.5cm] % Minor heading such as course title
+\textsc{\large Kaggle Competition}\\[0.5cm] % Minor heading such as course title
 
 %----------------------------------------------------------------------------------------
 %   TITLE SECTION
@@ -37,9 +37,7 @@
 
 % If you don't want a supervisor, uncomment the two lines below and remove the section above
 \Large \emph{Author:}\\
-Agara Mallesh, Dhanush\\ % Your name
-Asudegi, Mohammad Ali\\
-Zokaeinikoo, Maryam\\[3cm] % Your name
+Agara Mallesh, Dhanush\\ [3cm] % Your name
 
 
 %----------------------------------------------------------------------------------------
